# hilfsmittel-api

./: CNAME  README.md  generator_config.yaml  index.html  openapi.yaml
python-client/: README.md  pyproject.toml  tox.ini
python-client/.openapi-generator/: FILES
python-client/deutschland/hilfsmittel/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
python-client/deutschland/hilfsmittel/api/: __init__.py  default_api.py
python-client/docs/: BaumKnoten.md  DefaultApi.md  DetailProdukt.md  DetailProduktAllOf.md  DetailProduktAllOfKontruktionsmerkmale.md  Nachweisschema.md  NachweisschemaNachweisAbschnittAnforderungenInner.md  NachweisschemaNachweisAbschnittAnforderungenInnerAbschnittAnforderungenInner.md  NachweisschemaNachweisschemaKategorieZuweisungenInner.md  Produkt.md  Produktart.md  Produktgruppe.md  Untergruppe.md
python-client/sphinx-docs/: conf.py  index.rst
python-client/sphinx-docs/source/: hilfsmittel.api.rst  hilfsmittel.apis.rst  hilfsmittel.model.rst  hilfsmittel.models.rst  hilfsmittel.rst  modules.rst
python-client/test/: test_baum_knoten.py  test_default_api.py  test_detail_produkt.py  test_detail_produkt_all_of.py  test_detail_produkt_all_of_kontruktionsmerkmale.py  test_nachweisschema.py  test_nachweisschema_nachweis_abschnitt_anforderungen_inner.py  test_nachweisschema_nachweis_abschnitt_anforderungen_inner_abschnitt_anforderungen_inner.py  test_nachweisschema_nachweisschema_kategorie_zuweisungen_inner.py  test_produkt.py  test_produktart.py  test_produktgruppe.py  test_untergruppe.py
(+15 files in other folders)
