[tool]
[tool.poetry]
name = "de-hilfsmittel"
version = "1.0.0"
description = "Hilfsmittel-API"
keywords = ["OpenAPI", "OpenAPI-Generator", "hilfsmittel", "App", "API"]
homepage = "https://github.com/bundesAPI/hilfsmittel-api"
authors = ["BundesAPI <kontakt@bund.dev>"]
packages = [
  { include = "deutschland"}
]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
python-dateutil = "*"
urllib3 = ">=1.25.3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bundesAPI/hilfsmittel-api/issues"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

